Ignoring endpoints.yml

--- a/endpoints.yml
+++ b/endpoints.yml
@@ -27,10 +27,10 @@
 
 #tracker_store:
 #    type: mongod
-#    url: <url to your mongo instance, e.g. mongodb://localhost:27017>
-#    db: <name of the db within your mongo instance, e.g. rasa>
-#    username: <username used for authentication>
-#    password: <password used for authentication>
+#    url: mongodb+srv://kevinam99:baloney5000>@cluster0-f2cdt.gcp.mongodb.net/rasa>?retryWrites=true&w=majority
+#    db: rasa
+#    username: kevinam99
+#    password: baloney5000
 
 # Event broker which all conversation events should be streamed to.
 # https://rasa.com/docs/rasa/api/event-brokers/
